--- a/frontend.html
+++ b/frontend.html
@@ -39,7 +39,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oIM69fwt&__jvst=Employee+Referral&__jvsd=sDkQJgwh&__jvsc=Twitter&bid=nwyImMwp'>ServiceNow Careers - Staff Quality Engineer, Front-end</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">California  Pleasanton, CA</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
 <h5><a href='https://finanzchef24.join.com/jobs/466362-senior-frontend-engineer-m-w-d'>Job @ Finanzchef24 (Munich): Senior Frontend Engin... | JOIN</a></h5> 
@@ -78,7 +78,7 @@
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oVXebfw1&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nCp7lMwK'>DNEG Careers - Front End Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oVXebfw1&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nCp7lMwK'>DNEG Careers - Front End Developer</a></h5> 
 <p><span class="badge badge-light">Mumbai Chennai, India</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -194,7 +194,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/averityteam/job/pwgwyq1dysbnb9ipfwpn7ut36e'>Director of Front End Engineering  | Averity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/pwgwyq1dysbnb9ipfwpn7ut36e'>Director of Front End Engineering  | Averity</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -324,7 +324,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">Raleigh, North Carolina</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://archilogic.join.com/jobs/463118-frontend-engineer'>Job @ Archilogic (Z?rich): Frontend Engineer | JOIN</a></h5> 
+<h5><a href='https://archilogic.join.com/jobs/463118-frontend-engineer'>Job @ Archilogic (Z?rich): Frontend Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -368,7 +368,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://dedeleads.com/job/jefferson-frank-looking-for-fully-remote-front-end-engineer-salary-us140000-us160000-per-annum/'>Jefferson Frank looking for Fully Remote Front End Engineer( Salary: US$140000 - US$160000 per annum)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedeleads.com/job/jefferson-frank-looking-for-fully-remote-front-end-engineer-salary-us140000-us160000-per-annum/'>Jefferson Frank looking for Fully Remote Front End Engineer( Salary: US$140000 - US$160000 per annum)</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -388,7 +388,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">San Diego, California  San Diego, CA</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://interworks.applytojob.com/apply/eeheDbaou2/FrontEnd-Web-Developer'>Front-End Web Developer - InterWorks, Inc. - Career Page</a></h5> 
+<h5><a href='http://interworks.applytojob.com/apply/eeheDbaou2/FrontEnd-Web-Developer'>Front-End Web Developer - InterWorks, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
